# python-project-lvl3

./: .gitignore  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: main.yml
page_loader/: __init__.py  download.py  exceptions.py  logging.py  naming.py  page_loader.py
page_loader/scripts/: loader_script.py
page_loader/tests/: test_loader.py
